--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,7 +1,7 @@
 page-welcome {
   .splash-bg {
     position: relative;
-    background: url('../assets/img/splashbg.png') no-repeat transparent;
+    background: url("../assets/img/logo.png") no-repeat transparent;
     background-size: cover;
     height: 45%;
     z-index: 1;
@@ -10,8 +10,12 @@ page-welcome {
   }
 
   @keyframes animatedBackground {
-    from { background-position: 0 0; }
-    to { background-position: 100% 0; }
+    from {
+      background-position: 0 0;
+    }
+    to {
+      background-position: 100% 0;
+    }
   }
 
   .splash-info {
@@ -22,7 +26,7 @@ page-welcome {
   }
   .splash-logo {
     margin: auto;
-    background: url('../assets/img/appicon.png') repeat transparent;
+    background: url("../assets/img/appicon.png") repeat transparent;
     background-size: 100%;
     width: 128px;
     height: 128px;
